--- a/style.css
+++ b/style.css
@@ -13,6 +13,12 @@ body {
     border-bottom: solid 2px #83b271;
 }
 
+.biggie2 {
+    font-size: 60px;
+    padding-bottom: 10px;
+    border-bottom: solid 2px white;
+}
+
 .h100 {
     background: #d2ea9b;
     color: white;
@@ -20,6 +26,11 @@ body {
 
 .gradient {
     background-image: linear-gradient(#d2ea9b, #abcb89);
+    color: white;
+}
+
+.green {
+    background-color: #abcb89;
     color: white;
 }
 
@@ -80,3 +91,6 @@ body {
   background-image: linear-gradient(#83b271, #659153);
   display: none;
 }
+
+.progress {background: rgba(245, 245, 245, 1); border: 0px solid rgba(245, 245, 245, 1); border-radius: 4px; height: 20px;}
+.progress-bar-custom {background: #abcb89;}
